--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^4.0.1",
     "bluebird-global": "^1.0.1",
     "body-parser": "^1.18.3",
     "cerialize": "^0.1.18",
