--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,12 +8,15 @@
       "name": "Debug App",
       "program": "${workspaceFolder}/out/bp/index.js",
       "cwd": "${workspaceFolder}",
-      "args": ["start"],
+      "args": [
+        "start"
+      ],
       "protocol": "auto",
       "env": {
         "BP_MODULES_PATH": "${workspaceFolder}/modules:${workspaceFolder}/internal-modules",
         "NODE_PATH": "${workspaceFolder}/out/bp",
-        "DEBUG": "bp:none"
+        "DEBUG": "bp:none",
+        "FORCE_TRAIN_ON_MOUNT": "true"
       },
       "smartStep": true,
       "outFiles": [
@@ -31,7 +34,9 @@
       "request": "launch",
       "name": "Debug Jest Tests",
       "cwd": "${workspaceFolder}",
-      "env": { "NATIVE_EXTENSIONS_DIR": "./build/native-extensions" },
+      "env": {
+        "NATIVE_EXTENSIONS_DIR": "./build/native-extensions"
+      },
       "args": [
         "--inspect-brk",
         "${workspaceFolder}/node_modules/.bin/jest",
@@ -48,7 +53,9 @@
           "-c=${workspaceFolder}/jest.config.js"
         ]
       },
-      "outFiles": ["${workspaceFolder}/out/"],
+      "outFiles": [
+        "${workspaceFolder}/out/"
+      ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "sourceMaps": true,
@@ -59,7 +66,10 @@
       "request": "launch",
       "name": "Debug Jest Integration Tests",
       "cwd": "${workspaceFolder}",
-      "env": { "NATIVE_EXTENSIONS_DIR": "./build/native-extensions", "JEST_TIMEOUT": "30000" },
+      "env": {
+        "NATIVE_EXTENSIONS_DIR": "./build/native-extensions",
+        "JEST_TIMEOUT": "30000"
+      },
       "args": [
         "--inspect-brk",
         "${workspaceFolder}/node_modules/.bin/jest",
@@ -70,9 +80,15 @@
         "all"
       ],
       "windows": {
-        "args": ["--inspect-brk", "${workspaceRoot}/node_modules/jest/bin/jest.js", "--runInBand"]
+        "args": [
+          "--inspect-brk",
+          "${workspaceRoot}/node_modules/jest/bin/jest.js",
+          "--runInBand"
+        ]
       },
-      "outFiles": ["${workspaceFolder}/out/"],
+      "outFiles": [
+        "${workspaceFolder}/out/"
+      ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "sourceMaps": true,
@@ -83,7 +99,9 @@
       "type": "lldb",
       "request": "launch",
       "program": "node",
-      "args": ["test/start.js"],
+      "args": [
+        "test/start.js"
+      ],
       "env": {
         "BP_MODULES_PATH": "../../modules",
         "NODE_PATH": "./"
@@ -95,7 +113,9 @@
       "type": "lldb",
       "request": "launch",
       "program": "node",
-      "args": ["test/start.js"],
+      "args": [
+        "test/start.js"
+      ],
       "cwd": "${workspaceFolder}/src/bp/ml/crfsuite"
     },
     {
@@ -103,7 +123,9 @@
       "type": "lldb",
       "request": "launch",
       "program": "node",
-      "args": ["test/start.js"],
+      "args": [
+        "test/start.js"
+      ],
       "cwd": "${workspaceFolder}/src/bp/ml/fasttext"
     }
   ]
